--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -26,7 +26,7 @@ if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
 endif()
 
 
-add_library(dfly_transaction db_slice.cc malloc_stats.cc blocking_controller.cc
+add_library(dfly_transaction db_slice.cc blocking_controller.cc
             command_registry.cc  cluster/cluster_utility.cc
             journal/tx_executor.cc namespaces.cc
             common.cc journal/journal.cc journal/types.cc journal/journal_slice.cc
@@ -48,7 +48,7 @@ add_library(dragonfly_lib bloom_family.cc engine_shard_set.cc
             generic_family.cc hset_family.cc http_api.cc json_family.cc
             list_family.cc main_service.cc memory_cmd.cc rdb_load.cc rdb_save.cc replica.cc
             protocol_client.cc
-            snapshot.cc script_mgr.cc server_family.cc malloc_stats.cc
+            snapshot.cc script_mgr.cc server_family.cc
             detail/save_stages_controller.cc
             detail/snapshot_storage.cc
             set_family.cc stream_family.cc string_family.cc
