add(helm): add hostNetwork, topologySpreadConstraint and clusterIP support
Signed-off-by: Stefan Roman <elegant.frog3113@fastmail.com>

--- a/contrib/charts/dragonfly/ci/extracontainer-string-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/extracontainer-string-values.golden.yaml
@@ -24,6 +24,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
+  clusterIP: 
   ports:
     - port: 6379
       targetPort: dragonfly
@@ -58,6 +59,7 @@ spec:
         app.kubernetes.io/instance: test
     spec:
       serviceAccountName: test-dragonfly
+      hostNetwork: false
       containers:
         - args:
           - -c
