--- a/contrib/charts/dragonfly/ci/password-old-env-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/password-old-env-values.golden.yaml
@@ -32,6 +32,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
+  clusterIP: 
   ports:
     - port: 6379
       targetPort: dragonfly
@@ -66,6 +67,7 @@ spec:
         app.kubernetes.io/instance: test
     spec:
       serviceAccountName: test-dragonfly
+      hostNetwork: false
       containers:
         - name: dragonfly
           image: "docker.dragonflydb.io/dragonflydb/dragonfly:v1.13.0"
