--- a/contrib/charts/dragonfly/ci/securitycontext-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/securitycontext-values.golden.yaml
@@ -24,6 +24,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
+  clusterIP: 
   ports:
     - port: 6379
       targetPort: dragonfly
@@ -60,6 +61,7 @@ spec:
       serviceAccountName: test-dragonfly
       securityContext:
         allowPrivilegeEscalation: false
+      hostNetwork: false
       containers:
         - name: dragonfly
           securityContext:
