--- a/contrib/charts/dragonfly/ci/service-loadbalancer-ip.golden.yaml
+++ b/contrib/charts/dragonfly/ci/service-loadbalancer-ip.golden.yaml
@@ -25,6 +25,7 @@ metadata:
 spec:
   type: LoadBalancer
   loadBalancerIP: 127.0.0.1
+  clusterIP: 
   ports:
     - port: 6379
       targetPort: dragonfly
@@ -59,6 +60,7 @@ spec:
         app.kubernetes.io/instance: test
     spec:
       serviceAccountName: test-dragonfly
+      hostNetwork: false
       containers:
         - name: dragonfly
           image: "docker.dragonflydb.io/dragonflydb/dragonfly:v1.20.1"
