--- a/contrib/charts/dragonfly/ci/taints-tolerations-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/taints-tolerations-values.golden.yaml
@@ -24,6 +24,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
+  clusterIP: 
   ports:
     - port: 6379
       targetPort: dragonfly
@@ -76,6 +77,7 @@ spec:
                 values:
                 - high-memory
       serviceAccountName: test-dragonfly
+      hostNetwork: false
       containers:
         - name: dragonfly
           image: "docker.dragonflydb.io/dragonflydb/dragonfly:v1.20.1"
