--- a/contrib/charts/dragonfly/ci/tolerations-values.golden.yaml
+++ b/contrib/charts/dragonfly/ci/tolerations-values.golden.yaml
@@ -24,6 +24,7 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
+  clusterIP: 
   ports:
     - port: 6379
       targetPort: dragonfly
@@ -61,6 +62,7 @@ spec:
         - effect: NoSchedule
           operator: Exists
       serviceAccountName: test-dragonfly
+      hostNetwork: false
       containers:
         - name: dragonfly
           image: "docker.dragonflydb.io/dragonflydb/dragonfly:v1.20.1"
