--- a/src/facade/CMakeLists.txt
+++ b/src/facade/CMakeLists.txt
@@ -1,13 +1,16 @@
+add_library(dfly_parser_lib redis_parser.cc resp_expr.cc )
+cxx_link(dfly_parser_lib base strings_lib)
+
 add_library(dfly_facade conn_context.cc dragonfly_listener.cc dragonfly_connection.cc facade.cc
-            memcache_parser.cc redis_parser.cc reply_builder.cc op_status.cc service_interface.cc
-            reply_capture.cc resp_expr.cc cmd_arg_parser.cc tls_error.cc)
+            memcache_parser.cc reply_builder.cc op_status.cc service_interface.cc
+            reply_capture.cc cmd_arg_parser.cc tls_error.cc)
 
 if (DF_USE_SSL)
   set(TLS_LIB tls_lib)
   target_compile_definitions(dfly_facade PRIVATE DFLY_USE_SSL)
 endif()
 
-cxx_link(dfly_facade base strings_lib http_server_lib fibers2
+cxx_link(dfly_facade dfly_parser_lib http_server_lib fibers2
          ${TLS_LIB} TRDP::mimalloc TRDP::dconv)
 
 add_library(facade_test facade_test.cc)
