--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -42,11 +42,7 @@ jobs:
           dfly-executable: dragonfly
           gspace-secret: ${{ secrets.GSPACES_BOT_DF_BUILD }}
           build-folder-name: build
-          # This expression serves as a ternary operator, i.e. if the condition holds it returns
-          # 'not NON_EXISTING_MARK' otherwise not opt_only.
-          # Do not filter anything in Release, but do not run opt_only in Debug. Unfortunately an
-          # empty string creates a 'false' expression, so we use a non existing mark
-          filter: ${{ matrix.build-type == 'Release' && 'not NON_EXISTING_MARK' || 'not opt_only' }}
+          filter: ${{ matrix.build-type == 'Release' && 'not dbg_only' || 'not opt_only' }}
 
       - name: Upload logs on failure
         if: failure()
