--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,7 @@ jobs:
         run: |
           cd ${GITHUB_WORKSPACE}/build
           echo Run ctest -V -L DFLY
-          GLOG_alsologtostderr=1 GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 timeout 20 ctest -V -L DFLY
+          GLOG_alsologtostderr=1 GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 timeout 20m ctest -V -L DFLY
 
           echo "Running tests with --force_epoll"
 
@@ -141,20 +141,20 @@ jobs:
           EOF
 
           gdb -ix ./init.gdb --batch -ex r --args ./dragonfly_test --force_epoll
-          FLAGS_force_epoll=true GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 timeout 20 ctest -V -L DFLY
+          FLAGS_force_epoll=true GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 timeout 20m ctest -V -L DFLY
 
           echo "Finished running tests with --force_epoll"
 
           echo "Running tests with --cluster_mode=emulated"
-          FLAGS_cluster_mode=emulated timeout 20 ctest -V -L DFLY
+          FLAGS_cluster_mode=emulated timeout 20m ctest -V -L DFLY
 
           echo "Running tests with both --cluster_mode=emulated & --lock_on_hashtags"
-          FLAGS_cluster_mode=emulated FLAGS_lock_on_hashtags=true timeout 20 ctest -V -L DFLY
+          FLAGS_cluster_mode=emulated FLAGS_lock_on_hashtags=true timeout 20m ctest -V -L DFLY
 
-          timeout 5 ./dragonfly_test
-          timeout 5 ./multi_test --multi_exec_mode=1
-          timeout 5 ./multi_test --multi_exec_mode=3
-          timeout 5 ./json_family_test --jsonpathv2=false
+          timeout 5m ./dragonfly_test
+          timeout 5m ./multi_test --multi_exec_mode=1
+          timeout 5m ./multi_test --multi_exec_mode=3
+          timeout 5m ./json_family_test --jsonpathv2=false
 
       - name: Upload unit logs on failure
         if: failure()
