--- a/tools/packaging/Dockerfile.ubuntu-dev
+++ b/tools/packaging/Dockerfile.ubuntu-dev
@@ -12,10 +12,7 @@ RUN make release
 
 RUN build-release/dragonfly --version
 
-RUN curl -O https://raw.githubusercontent.com/ncopa/su-exec/212b75144bbc06722fbd7661f651390dc47a43d1/su-exec.c && \
-    gcc -Wall -O2 su-exec.c -o su-exec
-
-FROM debian:12-slim
+FROM ubuntu:22.04
 
 RUN --mount=type=tmpfs,target=/var/cache/apt \
     --mount=type=tmpfs,target=/var/lib/apt/lists \
@@ -30,7 +27,6 @@ WORKDIR /data
 
 COPY tools/docker/entrypoint.sh /usr/local/bin/entrypoint.sh
 COPY tools/docker/healthcheck.sh /usr/local/bin/healthcheck.sh
-COPY --from=builder /build/su-exec /usr/local/bin/
 COPY --from=builder /build/build-release/dragonfly /usr/local/bin/
 
 HEALTHCHECK CMD /usr/local/bin/healthcheck.sh
@@ -38,7 +34,5 @@ ENTRYPOINT ["entrypoint.sh"]
 
 # For inter-container communication.
 EXPOSE 6379
-
-USER dfly
 
 CMD ["dragonfly", "--logtostderr"]
