--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -68,21 +68,36 @@ jobs:
       - name: Test without coverage
         working-directory: tests/fakeredis
         run: |
-          poetry run pytest test/${{ matrix.tests }} --html=report-${{ matrix.tests }}.html --self-contained-html -v 
+          poetry run pytest test/${{ matrix.tests }} --junit-xml=results-${{ matrix.tests }}.xml --self-contained-html -v 
 
       - name: Upload Tests Result
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: tests-result-${{ matrix.tests }}
-          path: tests/fakeredis/report-${{ matrix.tests }}.html
+          path: tests/fakeredis/results-${{ matrix.tests }}.xml
 
-  upload-results:
+  bundle-results:
+    permissions:
+      checks: write
+      pull-requests: write
+
     needs: test
     if: always()
     runs-on: ubuntu-latest
     steps:
-      - name: Collect Tests Result
+      - name: Bundle Tests Result to one artifact
         uses: actions/upload-artifact/merge@v4
         with:
           delete-merged: true
+          name: tests-result
+
+      - name: Download Tests Result
+        uses: actions/download-artifact@v4
+        with:
+          name: tests-result
+
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        with:
+          report_paths: '*.xml'
