--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -68,20 +68,27 @@ jobs:
       - name: Test without coverage
         working-directory: tests/fakeredis
         run: |
-          poetry run pytest test/${{ matrix.tests }} --junit-xml=results-${{ matrix.tests }}.xml --self-contained-html -v 
+          poetry run pytest test/${{ matrix.tests }} \
+             --junit-xml=results-${{ matrix.tests }}.xml \ 
+             --html-${{ matrix.tests }}=report.html \
+             --self-contained-html -v
 
-      - name: Upload Tests Result
+      - name: Upload Tests Result xml
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: tests-result-${{ matrix.tests }}
+          name: tests-result-${{ matrix.tests }}.xml
           path: tests/fakeredis/results-${{ matrix.tests }}.xml
 
-  bundle-results:
-    permissions:
-      checks: write
-      pull-requests: write
+      - name: Upload Tests Result html
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: tests-result-${{ matrix.tests }}.html
+          path: tests/fakeredis/results-${{ matrix.tests }}.html
 
+  bundle-results-xml:
+    name: Bundle XML Results to one artifact & publish summary to workflow run
     needs: test
     if: always()
     runs-on: ubuntu-latest
@@ -90,14 +97,49 @@ jobs:
         uses: actions/upload-artifact/merge@v4
         with:
           delete-merged: true
-          name: tests-result
+          name: tests-result-xml
+          pattern: '*.xml'
 
       - name: Download Tests Result
         uses: actions/download-artifact@v4
         with:
-          name: tests-result
+          name: tests-result-xml
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v4
         with:
           report_paths: '*.xml'
+
+
+  publish-html-results:
+    name: Publish HTML Test Results to GitHub Pages
+    needs: test
+    if: always()
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    outputs:
+      pages-url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Bundle Tests Result to one artifact
+        uses: actions/upload-artifact/merge@v4
+        with:
+          delete-merged: true
+          name: tests-result-html
+          pattern: '*.html'
+
+      - name: Download Tests Result
+        uses: actions/download-artifact@v4
+        with:
+          name: tests-result-html
+
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        with:
+          report_paths: '*.xml'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: tests-result-html
