--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -25,7 +25,7 @@ jobs:
           - "latest"
         tests:
           - "test_json"
-          - "test_mixins"
+#          - "test_mixins"
           - "test_stack"
           - "test_connection.py"
           - "test_asyncredis.py"
@@ -70,7 +70,7 @@ jobs:
         run: |
           poetry run pytest test/${{ matrix.tests }} \
              --junit-xml=results-${{ matrix.tests }}.xml \ 
-             --html-${{ matrix.tests }}=report.html \
+             --html=report-${{ matrix.tests }}.html \
              --self-contained-html -v
 
       - name: Upload Tests Result xml
@@ -84,8 +84,8 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: tests-result-${{ matrix.tests }}.html
-          path: tests/fakeredis/results-${{ matrix.tests }}.html
+          name: report-${{ matrix.tests }}.html
+          path: tests/fakeredis/report-${{ matrix.tests }}.html
 
   bundle-results-xml:
     name: Bundle XML Results to one artifact & publish summary to workflow run
@@ -134,10 +134,6 @@ jobs:
         with:
           name: tests-result-html
 
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v4
-        with:
-          report_paths: '*.xml'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
