--- a/tests/fakeredis/pyproject.toml
+++ b/tests/fakeredis/pyproject.toml
@@ -40,3 +40,7 @@ markers = [
 ]
 asyncio_mode = "strict"
 generate_report_on_test = true
+render_collapsed = "failed,error"
+addopts = [
+     "--self-contained-html",
+]
