--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -65,7 +65,7 @@ jobs:
           echo "$HOME/.poetry/bin" >> $GITHUB_PATH
           poetry install
 
-      - name: Test without coverage
+      - name: Run tests
         working-directory: tests/fakeredis
         run: |
           poetry run pytest test/${{ matrix.tests }} \
@@ -86,30 +86,6 @@ jobs:
         with:
           name: report-${{ matrix.tests }}.html
           path: tests/fakeredis/report-${{ matrix.tests }}.html
-
-  bundle-results-xml:
-    name: Bundle XML Results to one artifact & publish summary to workflow run
-    needs: test
-    if: always()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Bundle Tests Result to one artifact
-        uses: actions/upload-artifact/merge@v4
-        with:
-          delete-merged: true
-          name: tests-result-xml
-          pattern: '*.xml'
-
-      - name: Download Tests Result
-        uses: actions/download-artifact@v4
-        with:
-          name: tests-result-xml
-
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v4
-        with:
-          report_paths: '*.xml'
-
 
   publish-html-results:
     name: Publish HTML Test Results to GitHub Pages
@@ -139,3 +115,26 @@ jobs:
         uses: actions/deploy-pages@v4
         with:
           artifact_name: tests-result-html
+
+  bundle-results-xml:
+    name: publish summary to workflow run
+    needs: test
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Bundle Tests Result to one artifact
+        uses: actions/upload-artifact/merge@v4
+        with:
+          delete-merged: true
+          name: tests-result-xml
+          pattern: '*.xml'
+
+      - name: Download Tests Result
+        uses: actions/download-artifact@v4
+        with:
+          name: tests-result-xml
+
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        with:
+          report_paths: '*.xml'
