--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -127,6 +127,8 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          token: '${{ secrets.GITHUB_TOKEN }}'
 
   bundle-results-xml:
     name: publish summary to workflow run
