--- a/tests/fakeredis/pyproject.toml
+++ b/tests/fakeredis/pyproject.toml
@@ -42,7 +42,7 @@ markers = [
 ]
 asyncio_mode = "strict"
 generate_report_on_test = true
-render_collapsed = "faipoled,error"
+render_collapsed = "failed,error"
 addopts = [
     "--self-contained-html",
 ]
