--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -73,7 +73,9 @@ jobs:
       - name: Run tests
         working-directory: tests/fakeredis
         run: |
-          poetry run pytest test/ --ignore test/test_hypothesis.py  --ignore test/test_json/ \
+          poetry run pytest test/ \
+            --ignore test/test_hypothesis.py  \
+            --ignore test/test_json/ \
             --ignore test_bitmap_commands.py \
             --junit-xml=results-tests.xml  --html=report-tests.html -v
         continue-on-error: true  # For now to mark the flow as successful
