--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -75,6 +75,8 @@ jobs:
         run: |
           poetry run pytest test/ \
             --ignore test/test_hypothesis.py  \
+            --ignore test/test_geo_commands.py  \
+            --ignore test/test_bitmap_commands.py  \
             --ignore test/test_json/ \
             --junit-xml=results-tests.xml  --html=report-tests.html -v
         continue-on-error: true  # For now to mark the flow as successful
