--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,15 +37,11 @@ jobs:
     strategy:
       matrix:
         # Test of these containers
-        container: ["ubuntu-dev:20", "alpine-dev:latest"]
+        container: ["ubuntu-dev:20"]
         build-type: [Debug, Release]
         compiler: [{ cxx: g++, c: gcc }]
         cxx_flags: ["-Werror"]
-        include:
-          - container: "alpine-dev:latest"
-            build-type: Debug
-            compiler: { cxx: clang++, c: clang }
-            cxx_flags: ""
+        runner: [ubuntu-latest, [self-hosted, linux, ARM64]]
 
     runs-on: ubuntu-latest
     env:
@@ -115,55 +111,13 @@ jobs:
       - name: Build
         run: |
           cd ${GITHUB_WORKSPACE}/build
-          ninja search_family_test
-          df -h
-          echo "-----------------------------"
-          ninja src/all
+          ninja dragonfly
 
       - name: PostFail
         if: failure()
         run: |
           echo "disk space is:"
           df -h
-
-      - name: C++ Unit Tests
-        run: |
-          cd ${GITHUB_WORKSPACE}/build
-          echo Run ctest -V -L DFLY
-          GLOG_alsologtostderr=1 GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 timeout 20m ctest -V -L DFLY
-
-          echo "Running tests with --force_epoll"
-
-          # Create a rule that automatically prints stacktrace upon segfault
-          cat > ./init.gdb <<EOF
-          catch signal SIGSEGV
-          command
-          bt
-          end
-          EOF
-
-          gdb -ix ./init.gdb --batch -ex r --args ./dragonfly_test --force_epoll
-          FLAGS_force_epoll=true GLOG_vmodule=rdb_load=1,rdb_save=1,snapshot=1 timeout 20m ctest -V -L DFLY
-
-          echo "Finished running tests with --force_epoll"
-
-          echo "Running tests with --cluster_mode=emulated"
-          FLAGS_cluster_mode=emulated timeout 20m ctest -V -L DFLY
-
-          echo "Running tests with both --cluster_mode=emulated & --lock_on_hashtags"
-          FLAGS_cluster_mode=emulated FLAGS_lock_on_hashtags=true timeout 20m ctest -V -L DFLY
-
-          timeout 5m ./dragonfly_test
-          timeout 5m ./multi_test --multi_exec_mode=1
-          timeout 5m ./multi_test --multi_exec_mode=3
-          timeout 5m ./json_family_test --jsonpathv2=false
-          timeout 5m ./tiered_storage_test --vmodule=db_slice=2 --logtostderr
-      - name: Upload unit logs on failure
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: unit_logs
-          path: /tmp/*INFO*
 
       - name: Run regression tests
         if: matrix.container == 'ubuntu-dev:20'
