--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,8 @@ jobs:
     strategy:
       matrix:
         # Test of these containers
-        container: ["ubuntu-dev:20"]
-        build-type: [Debug, Release]
+        container: ["ubuntu-latest"]
+        build-type: [Debug]
         compiler: [{ cxx: g++, c: gcc }]
         cxx_flags: ["-Werror"]
         runner: [ubuntu-latest, [self-hosted, linux, ARM64]]
