--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,16 +39,8 @@ jobs:
         # Test of these containers
         container: ["ubuntu-dev:20"]
         build-type: [Debug]
-        compiler: [{ cxx: g++, c: gcc }]
-        cxx_flags: ["-Werror"]
-        runner: [ubuntu-dev:20, [self-hosted, linux, ARM64]]
-
-    runs-on: ubuntu-latest
-    env:
-      SCCACHE_GHA_ENABLED: "true"
-      SCCACHE_CACHE_SIZE: 6G
-      SCCACHE_ERROR_LOG: /tmp/sccache_log.txt
-      # SCCACHE_LOG: debug
+        runner: [ubuntu-latest, [ARM64]]
+    runs-on: ${{ matrix.runner }}
 
     container:
       image: ghcr.io/romange/${{ matrix.container }}
