--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: "0 9 * * *" # run at 6 AM UTC
   workflow_dispatch:
+permissions:
+  contents: read
 
 jobs:
   benchmark:
