feat: adds codesql for code vulnerbility scanning
Signed-off-by: BLANKatGITHUB <131886247+BLANKatGITHUB@users.noreply.github.com>

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,11 +40,11 @@ jobs:
           languages: ${{ matrix.language }}
 
       - name: Autobuild
-        if: matrix.language = "python"
+        if: ${{ matrix.language == "python" }}
         uses: github/codeql-action/autobuild@v3
 
       - name: build
-        if: matrix.language = "cpp"
+        if: ${{ matrix.language == "cpp" }}
         run: |
           echo "build application using script"
           ./dragonfly/tools/release.sh
