--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -23,7 +23,7 @@ jobs:
     name: "Run tests: "
     permissions:
       pull-requests: write
-      checks: write
+      checks: read
     # services:
     #   redis:
     #     image: docker.dragonflydb.io/dragonflydb/dragonfly:${{ matrix.DRAGONFLY_VERSION }}
