--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,28 +21,20 @@ jobs:
       - uses: actions/setup-python@v5
       - name: Install dependencies
         run: |
-          python -m pip install pre-commit
-          python -m pip freeze --local
+          python -m venv venv
+          source venv/bin/activate
+          pip install pre-commit
           lsblk -l
           echo "sda rotational = $(cat /sys/block/sda/queue/rotational)"
           echo "sdb rotational = $(cat /sys/block/sdb/queue/rotational)"
-      - name: Create virtual environment
-        run: python -m venv venv
-      - name: Activate virtual environment
-        run: |
-          echo "Activating virtual environment"
-          source venv/bin/activate
-          python -m pip install --upgrade pip
-      - name: Install dependencies
-        run: |
-          source venv/bin/activate
-          pip install pre-commit
       - uses: actions/cache@v4
         with:
           path: ~/.cache/pre-commit
           key: pre-commit|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Run pre-commit checks
-        run: pre-commit run --show-diff-on-failure --color=always --from-ref HEAD^ --to-ref HEAD
+        run:
+          source venv/bin/activate
+          pre-commit run --show-diff-on-failure --color=always --from-ref HEAD^ --to-ref HEAD
         shell: bash
   build:
     strategy:
