--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         PYTHON_VERSION:
-          - "3.10"
+          - "3.9"
     name: "Run tests: "
     permissions:
       pull-requests: write
@@ -50,9 +50,11 @@ jobs:
         shell: bash
         working-directory: tests/fakeredis
         run: |
-          python -m pip --quiet install poetry
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          poetry install
+          python -m venv venv
+          source venv/bin/activate
+          #python -m pip install poetry
+          #echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+          #poetry install
       - name: Configure CMake
         run: |
           cmake -B ${GITHUB_WORKSPACE}/build \
@@ -135,7 +137,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           cache-dependency-path: tests/fakeredis/poetry.lock
-          python-version: "3.12"
+          python-version: "3.10"
 
       - name: Merge html results
         run: |
