--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -39,7 +39,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-            #- uses: actions/setup-python@v5
 
       - name: Install dependencies
         env:
@@ -52,8 +51,8 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           python3 -m pip install poetry
-          #echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          #poetry install
+          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+          poetry install
       - name: Configure CMake
         run: |
           cmake -B ${GITHUB_WORKSPACE}/build \
