--- a/.github/workflows/test-fakeredis.yml
+++ b/.github/workflows/test-fakeredis.yml
@@ -43,11 +43,7 @@ jobs:
         shell: bash
         working-directory: tests/fakeredis
         run: |
-          apt update
-          apt install -y python3 python3.10-venv
-          python3 -m venv venv
-          source venv/bin/activate
-          python3 -m pip install poetry
+          pip install poetry
           echo "$HOME/.poetry/bin" >> $GITHUB_PATH
           poetry install
       - name: Configure CMake
