--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,26 +1,20 @@
 version: 2
 updates:
-  - package-ecosystem: github-actions
-    directory: /
+  - package-ecosystem: "github-actions"
+    directory: "/"
     schedule:
-      interval: daily
+      interval: "daily"
 
-  - package-ecosystem: gomod
-    directory: /contrib/charts/dragonfly
+  - package-ecosystem: "gomod"
+    directories:
+      - "/contrib/charts/dragonfly"
+      - "/tools/replay"
     schedule:
-      interval: daily
+      interval: "daily"
 
-  - package-ecosystem: pip
-    directory: /tests/dragonfly
+  - package-ecosystem: "pip"
+    directories:
+      - "/tests/dragonfly"
+      - "/tools"
     schedule:
-      interval: daily
-
-  - package-ecosystem: gomod
-    directory: /tools/replay
-    schedule:
-      interval: daily
-
-  - package-ecosystem: pip
-    directory: /tools
-    schedule:
-      interval: daily
+      interval: "daily"
