--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with: 
+          submodules: true
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
